--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ dependencies = [
     "editdistance>=0.8.1",
     "einops>=0.8.1",
     "fiddle>=0.3.0",
+    "flask>=3.0",
     "huggingface-hub<1.0",
     "hydra-core>=1.3.2",
     "ipython>=9.6.0",
@@ -22,6 +23,7 @@ dependencies = [
     "pyannote-core>=6.0.1",
     "pyannote-metrics>=4.0.0",
     "pynput>=1.8.1",
+    "pyperclip>=1.8.2",
     "sacrebleu>=2.5.1",
     "sounddevice>=0.5.3",
     "soundfile>=0.13.1",
